--- a/app/css/fonts.css
+++ b/app/css/fonts.css
@@ -1,44 +1,62 @@
 @font-face {
-    font-family: 'proximanova-bold';
-    src: url('../fonts/proximanova-bold/proximanova-bold.woff') format('woff'),
-         url('../fonts/proximanova-bold/proximanova-bold.eot') format('eot'),
-         url('../fonts/proximanova-bold/proximanova-bold.ttf') format('truetype');
+    font-family: 'BlissPro-Heavy';
+    src: url('../fonts/BlissPro-Heavy/BlissPro-Heavy.woff') format('woff'),
+         url('../fonts/BlissPro-Heavy/BlissPro-Heavy.eot') format('eot'),
+         url('../fonts/BlissPro-Heavy/BlissPro-Heavy.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'proximanova-extrabold';
-    src: url('../fonts/proximanova-extrabold/proximanova-extrabold.woff') format('woff'),
-         url('../fonts/proximanova-extrabold/proximanova-extrabold.eot') format('eot'),
-         url('../fonts/proximanova-extrabold/proximanova-extrabold.ttf') format('truetype');
+    font-family: 'BlissPro-Bold';
+    src: url('../fonts/BlissPro-Bold/BlissPro-Bold.woff') format('woff'),
+         url('../fonts/BlissPro-Bold/BlissPro-Bold.eot') format('eot'),
+         url('../fonts/BlissPro-Bold/BlissPro-Bold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'proximanova-light';
-    src: url('../fonts/proximanova-light/proximanova-light.woff') format('woff'),
-         url('../fonts/proximanova-light/proximanova-light.eot') format('eot'),
-         url('../fonts/proximanova-light/proximanova-light.ttf') format('truetype');
+    font-family: 'BlissPro-ExtraBold';
+    src: url('../fonts/BlissPro-ExtraBold/BlissPro-ExtraBold.woff') format('woff'),
+         url('../fonts/BlissPro-ExtraBold/BlissPro-ExtraBold.woff.eot') format('eot'),
+         url('../fonts/BlissPro-ExtraBold/BlissPro-ExtraBold.woff.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'proximanova-regular';
-    src: url('../fonts/proximanova-regular/proximanova-regular.woff') format('woff'),
-         url('../fonts/proximanova-regular/proximanova-regular.eot') format('eot'),
-         url('../fonts/proximanova-regular/proximanova-regular.ttf') format('truetype');
+    font-family: 'BlissPro-Italic';
+    src: url('../fonts/BlissPro-Italic/BlissPro-Italic.woff') format('woff'),
+         url('../fonts/BlissPro-Italic/BlissPro-Italic.eot') format('eot'),
+         url('../fonts/BlissPro-Italic/BlissPro-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'proximanova-regularitalic';
-    src: url('../fonts/proximanova-regularitalic/proximanova-regularitalic.woff') format('woff'),
-         url('../fonts/proximanova-regularitalic/proximanova-regularitalic.eot') format('eot'),
-         url('../fonts/proximanova-regularitalic/proximanova-regularitalic.ttf') format('truetype');
+    font-family: 'BlissPro-Light';
+    src: url('../fonts/BlissPro-Light/BlissPro-Light.woff') format('woff'),
+         url('../fonts/BlissPro-Light/BlissPro-Light.eot') format('eot'),
+         url('../fonts/BlissPro-Light/BlissPro-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'BlissPro-Medium';
+    src: url('../fonts/BlissPro-Medium/BlissPro-Medium.woff') format('woff'),
+         url('../fonts/BlissPro-Medium/BlissPro-Medium.eot') format('eot'),
+         url('../fonts/BlissPro-Medium/BlissPro-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'BlissPro-Regular';
+    src: url('../fonts/BlissPro-Regular/BlissPro-Regular.woff') format('woff'),
+         url('../fonts/BlissPro-Regular/BlissPro-Regular.eot') format('eot'),
+         url('../fonts/BlissPro-Regular/BlissPro-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
